<resources>
    <string name="app_name">Bar Inventory</string>

    <string name="action_insert_dummy_data">Insert Dummy Data</string>

    <string name="action_delete_all_entries">Delete All Items</string>

    <string name="editor_activity_title_new_item">Add an Item</string>

    <string name="action_save">Save</string>

    <string name="action_delete">Delete</string>

    <string name="category_overview">Overview</string>

    <string name="category_category">Category</string>

    <string name="category_quantity">Quantity</string>

    <string name="category_price">Price</string>

    <string name="category_phone">Phone</string>

    <string name="category_photo">Photo</string>

    <string name="hint_item_name">Name</string>

    <string name="hint_item_category">Category</string>

    <string name="hint_item_quantity">Quantity</string>

    <string name="hint_item_price">$</string>

    <string name="hint_item_phone">Tel #</string>

    <string name="place_call">Order More</string>

    <string name="category_misc">Misc</string>

    <string name="category_beer">Beer</string>

    <string name="category_wine">Wine</string>

    <string name="toast_all_data_required">Information must be provided for all fields</string>

    <string name="category_liquor">Liquor</string>

    <string name="toast_not_less_zero">Inventory can not be negative</string>

    <string name="category_soda">Soda</string>

    <string name="category_juice">Juice</string>

    <string name="toast_fail">Error with saving item</string>

    <string name="toast_fail_no_negative">Inventory can not be less than 0</string>

    <string name="toast_success">Item saved</string>

    <string name="empty_view_title_text">It\'s a bit lonely here...</string>

    <string name="empty_view_subtitle_text">Get started by adding an item</string>

    <string name="editor_activity_title_edit_item">Edit Item</string>

    <string name="order_activity_title">Order More Stock</string>

    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing</string>

    <string name="discard">Discard</string>

    <string name="keep_editing">Keep Editing</string>

    <string name="editor_delete_item_successful">Item deleted</string>

    <string name="editor_delete_item_failed">Error with deleting item</string>

    <string name="delete_dialog_msg">Delete this item?</string>

    <string name="delete">Delete</string>

    <string name="cancel">Cancel</string>

    <string name="unit_item_quantity">bottles</string>

    <string name="label_category">Category</string>

    <string name="label_item">Item</string>

    <string name="label_quantity">Quantity</string>

    <string name="buy_sell_activity_title">Buy or Sell Inventory</string>

    <string name="bought">Received:</string>

    <string name="sold">Sold:</string>

    <string name="instock">In Stock:</string>

    <string name="phone_less_than_ten_digits_warning">Supplier contact phone number must be 10 digits long</string>

</resources>
