<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".EditorActivity">

    <!-- Overview category -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_overview"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp"
            android:orientation="vertical">

            <!-- Name field -->
            <EditText
                android:id="@+id/edit_pet_name"
                android:hint="@string/hint_item_name"
                android:inputType="textCapWords"
                style="@style/EditorFieldStyle" />

        </LinearLayout>
    </LinearLayout>

    <!-- Category category -->
    <LinearLayout
        android:id="@+id/container_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_category"
            style="@style/CategoryStyle" />

        <!-- Input field -->
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:orientation="vertical">

            <!-- Category drop-down spinner -->
            <Spinner
                android:id="@+id/spinner_category"
                android:layout_height="48dp"
                android:layout_width="wrap_content"
                android:paddingRight="16dp"
                android:spinnerMode="dropdown"/>
        </LinearLayout>
    </LinearLayout>

    <!-- Quantity category -->
    <LinearLayout
        android:id="@+id/container_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_quantity"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Quantity field -->
            <EditText
                android:id="@+id/edit_item_quantity"
                android:hint="@string/hint_item_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <TextView
                android:id="@+id/label_quantity_units"
                android:text="@string/unit_item_quantity"
                style="@style/EditorUnitsStyle"/>

        </RelativeLayout>
    </LinearLayout>

    <!-- Price category -->
    <LinearLayout
        android:id="@+id/container_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_price"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Price field -->
            <EditText
                android:id="@+id/edit_item_price"
                android:hint="@string/hint_item_price"
                android:inputType="number"
                style="@style/EditorFieldStyle" />


        </RelativeLayout>
    </LinearLayout>

    <!-- Phone category -->
    <LinearLayout
        android:id="@+id/container_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_phone"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Phone field -->
            <EditText
                android:id="@+id/edit_item_phone"
                android:hint="@string/hint_item_phone"
                android:inputType="phone"
                style="@style/EditorFieldStyle" />


        </RelativeLayout>
    </LinearLayout>

    <!-- Photo category -->
    <LinearLayout
        android:id="@+id/container_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_photo"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Upload photo button -->
            <Button
                android:id="@+id/upload_item_photo"
                style="@style/EditorFieldStyle"
                android:text="Upload Photo" />

        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:id="@+id/upload_image_view"/>

    </LinearLayout>

</LinearLayout>