<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_margin"
    tools:context=".BuySellActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buy_sell_item_name"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buy_sell_item_category"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buy_sell_item_quantity"/>

    <!-- Buy Quantity category -->
    <LinearLayout
        android:id="@+id/container_buy_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_quantity"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Quantity field -->
            <EditText
                android:id="@+id/buy_item_quantity"
                android:hint="@string/hint_item_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <TextView
                android:id="@+id/label_buy_quantity_units"
                android:text="@string/unit_item_quantity"
                style="@style/EditorUnitsStyle"/>

        </RelativeLayout>
    </LinearLayout>

    <!-- Sell Quantity category -->
    <LinearLayout
        android:id="@+id/container_sell_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <!-- Label -->
        <TextView
            android:text="@string/category_quantity"
            style="@style/CategoryStyle" />

        <!-- Input fields -->
        <RelativeLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="2"
            android:paddingLeft="4dp">

            <!-- Quantity field -->
            <EditText
                android:id="@+id/sell_item_quantity"
                android:hint="@string/hint_item_quantity"
                android:inputType="number"
                style="@style/EditorFieldStyle" />

            <TextView
                android:id="@+id/label_sell_quantity_units"
                android:text="@string/unit_item_quantity"
                style="@style/EditorUnitsStyle"/>

        </RelativeLayout>
    </LinearLayout>

</LinearLayout>